<resources>
    <string name="app_name">myVersion_Proj</string>
    <string name="view_schedule">View schedule</string>
    <string name="w3_school">W3 School</string>
    <string name="load">Load</string>
    <string name="publish_marks">Publish marks</string>
    <string name="manage_assignments">Manage Assignments</string>
    <string name="name">Name</string>
    <string name="marks">Marks</string>
    <string name="publish">Publish</string>
    <string name="enter_assessment_type">Enter Assessment type</string>
    <string name="schedule">Schedule</string>
    <string name="rb_publish_marks">Publish_Marks</string>
    <string name="show_marks">Show_Marks</string>
    <string name="server_ip">http://10.0.2.2/school/</string>
    <string name="enter_room">Enter Room</string>
    <string name="add">Add</string>
    <string name="build_schedule">Build Schedule</string>

    <string name="student_panel">Student Panel</string>
    <string name="show_schedule">Show Schedule</string>
    <string name="view_marks">View Marks</string>
    <string name="assignments">Assignments</string>

    <string name="registrar_dashboard">Registrar Dashboard</string>
    <string name="student"> Students</string>
    <string name="manage_subjects">Manage Subjects</string>
    <string name="build_schedules">Build Schedules</string>
    <string name="view_students">View Students</string>
    <string name="teachers">Teachers</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="show_assignments">Show Assignments</string>

</resources>