<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtTitle"
            android:fontFamily="@font/capriola"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_panel"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btnSchedule"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_schedule"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnMarks"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_marks"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnAssignments"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assignments"
            android:drawablePadding="10dp"
            android:padding="12dp"
            android:textSize="18sp"/>

    </LinearLayout>
</ScrollView>
